updated leaverequest dto